style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* general elements */

.red-link {
  color: var(--red);
  text-decoration: none;
}

.red-link:hover {
  color: black;
}

:root {
  --yellow: #fd3;
  --red: #f42;
  --dark-pink: #ffebe7;
  --light-pink: #fffaf8;
  --dark-grey: #131313;
  --img-gradient:
    linear-gradient(
      340deg,
      rgba(0, 0, 0, 1),
      rgba(18, 18, 18, 0)
    );
  --header-gradient:
    linear-gradient(
      350deg,
      rgb(0, 0, 0),
      rgba(220, 0, 0, 0.544)
    );
}

html {
  font-size: 62.5%;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

main {
  margin: 2px 10px;
}

nav {
  width: 100%;
}

.navbar {
  font-size: 1.4rem;
}

.navbar ul {
  display: flex;
}

.top-list-left li,
.top-list-right li {
  list-style: none;
  padding: 5px 10px;
}

.top-list-left {
  left: 0;
  top: 0;
}

.top-list-right {
  position: absolute;
  right: 0;
  top: 0;
}

.top-nav {
  background: black;
  color: white;
  height: 2.5rem;
}

.top-nav a {
  color: white;
  text-decoration: none;
}

.navigation a {
  text-decoration: none;
  color: rgb(108, 108, 108);
}

.navigation li {
  list-style: none;
  padding: 18px 15px;
  background: #fdfdfd;
}

.fa-search {
  position: absolute;
  right: 0;
  color: lightgrey;
  padding: 18px;
  border: 0.5px solid rgba(48, 48, 48, 0.085);
  transform: rotate(90deg);
  top: 25px;
}

.mobile-nav {
  display: none;
}

.fa-search:hover {
  color: black;
}

.fest-ad {
  background: var(--yellow);
  padding: 5px 15px;
}

.fest-ad a {
  text-decoration: none;
  color: black;
  font-size: 1.4rem;
}

.main-header {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-gap: 10px;
  color: white;
}

.header-left {
  background:
    var(--header-gradient),
    url(https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2020%2F02%2FNew-Project-10.png&signature=62be7b56c9b11cfa3ca8d429c4e23c18);
  height: 60vh;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  padding: 10px;
}

.header-right {
  display: grid;
  grid-gap: 8px;
  height: 60vh;
}

.header-right-top {
  background:
    var(--img-gradient),
    url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/02/Copy-of-Copy-of-Copy-of-Copy-of-...-1-1-796x417.png);
}

.header-right-bottom {
  background:
    var(--img-gradient),
    url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/01/earth-1149733_1920-796x529.jpg)
      30%,
    10%;
}

.logo img {
  width: 40%;
}

.header-date {
  float: right;
  font-size: 1.6rem;
}

.header-left-contents {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 45%;
  width: 100%;
  grid-column: 1/3;
  font-size: 1.4rem;
}

.header-right-contents {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 45%;
  width: 100%;
  grid-column: 1/3;
  font-size: 1.4rem;
  padding: 10px;
}

.header-left-contents h2 {
  font-size: 4.6rem;
}

.header-right-contents h2 {
  font-size: 3rem;
}

.header-left-contents ul,
.header-left-contents li,
.header-right-contents ul,
.header-right-contents li {
  display: flex;
  padding: 0 8px 0 0;
  color: grey;
}

/* media queries goes here */

@media screen and (max-width: 768px) {
  .navigation {
    width: 100%;
  }

  .navigation li {
    display: none;
  }

  .main-header {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 10px;
    width: 100%;
  }

  .logo img {
    display: none;
  }

  .header-left {
    height: 18rem;
    display: block;
  }

  .header-right {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 10px;
    height: 100%;
  }

  .header-right div {
    height: 18rem;
    display: block;
  }

  .header-left-contents {
    width: 100%;
    height: 100%;
  }

  .top-nav {
    display: none;
  }

  .mobile-nav {
    display: block;
    position: fixed;
    height: 5rem;
    background: white;
    width: 100%;
    z-index: 1000;
  }

  .mobile-nav ul {
    float: right;
    list-style: none;
  }

  .mobile-nav img {
    width: 10rem;
    position: absolute;
    left: 0;
    height: 5rem;
  }

  .fa-search {
    position: relative;
    top: 0;
  }

  .fa-bars {
    padding: 18px;
    border: 0.5px solid rgba(48, 48, 48, 0.085);
    top: 25px;
    color: var(--red);
  }

  .fest-ad {
    display: none;
  }

  main {
    padding-top: 5.1rem;
  }

  .header-date {
    display: none;
  }

  div.deals-card {
    display: flex;
  }

  div.bg {
    padding-top: 7.5rem;
    width: 75px;
    height: 0;
    margin-right: 2rem;
  }

  div.deals-card--tag {
    display: none;
  }

  div.deals-card-text a {
    font-size: 1.3rem;
  }

  div.deals-card-text {
    padding: 0;
  }

  /*
  mediaquery for footer */

  .footer-nav-container {
    width: 100%;
  }

  div.deals-cards {
    display: flex;
    flex-direction: column;
    width: 95vw;
    margin: 0;
  }

  div.app {
    grid-template-columns: 1fr;
    width: 100%;
  }
}

.title-container a {
  color: white;
  font-weight: bolder;
  text-decoration: none;
  font-size: 1.6rem;
}

.title-container span {
  font-size: 1rem;
  color: lightgray;
  position: relative;
  top: 2rem;
}

/* media query for tablets */

@media screen and (min-width: 768px) and (max-width: 1024px) {
  div.deals-cards {
    grid-template-columns: repeat(3, 1fr);
    width: 96%;
    margin: 4rem 0;
  }

  div.app {
    grid-template-columns: repeat(2, 1fr);
  }
}

/* table media query ends here */
.footer {
  font-size: 1.6rem;
  background-color: var(--dark-grey);
  width: 100vw;
}

.footer-copyright {
  color: #aaa;
  font-size: 1.1rem;
  margin: auto;
  padding: 4rem;
  text-align: center;
  background: black;
}

.love {
  color: red;
  font-size: 1.6rem;
}

.footer-copy {
  text-transform: uppercase;
  color: white;
  font-weight: bolder;
  font-family: sans-serif;
  cursor: pointer;
}

/* styling the deals section */

.deals {
  font-size: 1.6rem;
  width: 100%;
}
/* ... */

